# YYC3-Family-AI

./: .env.cdn.example  .env.example  .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  PROJECT-STANDARDS.md  README.md  SECURITY.md  ci-workflow.yml  docker-compose.yml  eslint.config.js  index.html  lighthouserc.json  mcp.config.json  package.json  playwright.config.ts  pnpm-lock.yaml  tauri.conf.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: .eslintrc.cjs  .prettierrc  CI-CD-实施指南.md  CI-CD-快速开始指南.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml  package.json  tsconfig.json  vite.config.ts
.storybook/: main.ts  preview.tsx
docker/: healthcheck.sh  nginx.conf
docs/: API-Reference.md  CDN-ACCELERATION.md  CI-CD-AUDIT-REPORT.md  CI-CD-OPTIMIZATION-GUIDE.md  CONSOLE-CLEANUP-REPORT.md  FINAL-OPEN-SOURCE-AUDIT-REPORT.md  GITHUB-ISSUE-TRACKING-BOARD.md  MAC-M4-ENCAPSULATION-GUIDE.md  PROJECT-REORGANIZATION-SUMMARY.md  README.md  SECURITY-XSS-FIX-REPORT.md  TERMINAL-V3.md  YYC3-便携智能库深度分析集成.md  YYC3-团队规范-开发标准.md  YYC3-新增功能落实分析报告.md  YYC3-项目开源前导师终审报告.md  全局设置页面审核-简洁总结.md  全局设置页面细度审核报告.md
e2e/: ai-chat-flow.spec.ts  code-generation-flow.spec.ts  complete-user-flow.spec.ts  complete-workflow.spec.ts  file-management.spec.ts  ide-panel-dnd.spec.ts  multi-agent-panel.spec.ts  panel-management.spec.ts  performance-benchmark.spec.ts  performance-new-features.spec.ts  security-tests.spec.ts  settings-configuration.spec.ts  stress-testing.spec.ts  (+1 more)
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
(+880 files in other folders)
