[package]
name = "yyc3-family-ai"
version = "0.0.1"
description = "YYC3 Family AI - 智能编程助手"
authors = ["YanYuCloudCube Team <admin@0379.email>"]
license = "MIT"
repository = "https://github.com/YYC-Cube/yyc3-family-ai"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.0"
sysinfo = "0.30"
arboard = "3.0"
whoami = "1.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
